$Id: History,v 1.1 1999-01-07 16:06:09 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N05 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
11 December 1998 M. Verderi
- fix made in ExN05CalorimeterSD to allow several instanciations of this class.
  The problem was a static variable (HCID) used in EndOfEventAction which made
  confusion to get the hits collection. HCID is now put as private (non static!) 
  member of the class.
- the example.in/.out are updated accordingly


9 December 1998 M. Verderi
- Added ExN05PionShowerModel: a model producing hits
  for pi+/pi-
- Modify ExN05EMShowerModel to produce a "less unrealistic"
  shower shape: now the longitudinal profile is according to
  the Gamma distribution. Transverse profile is two cylinder:
  the 1 moliere radius receive 90% of the energy, the 3.5 one
  receives the rest.
- Added RandomGamma: shoot at random according to the Gamma
  distribution. Adapted from RNGAMA function of KERNLIB.
  (thanks to D. Bernard who gave me the source).
- ExN05DetectorConstruction. Many changes:
	- EM calo size reduced, crytals also;
	- addition of an hadronic calorimeter
	- addition of a ghost volume
  The G4VFastSimulationModel are instanciated(?) here, and
  no more in exampleN05.cc
- exampleN05.in modified to shoot pions in order to test
  the ghost geometry.
- ExN05PhysicsList modified to add the parameterisation