@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN05RunAction.hh,v 1.1 1999-01-07 16:06:14 gunter Exp $
+// $Id: ExN05RunAction.hh,v 1.2 1999-04-16 12:04:59 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -25,8 +25,8 @@ class ExN05RunAction : public G4UserRunAction
     ~ExN05RunAction();
 
   public:
-    void BeginOfRunAction(G4Run* aRun);
-    void EndOfRunAction(G4Run* aRun);
+    void BeginOfRunAction(const G4Run* aRun);
+    void EndOfRunAction(const G4Run* aRun);
 
   private:
     G4Timer* timer;
