@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN05SteppingAction.hh,v 1.1 1999-01-07 16:06:14 gunter Exp $
+// $Id: ExN05SteppingAction.hh,v 1.2 1999-04-16 12:05:00 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -19,9 +19,9 @@ class ExN05SteppingAction : public G4UserSteppingAction
 {
   public:
     ExN05SteppingAction();
-    ~ExN05SteppingAction(){};
+    virtual ~ExN05SteppingAction(){};
 
-    void UserSteppingAction();
+    virtual void UserSteppingAction(const G4Step*);
 
   private:
     G4bool drawFlag;
