@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN05EventAction.cc,v 1.1 1999-01-07 16:06:17 gunter Exp $
+// $Id: ExN05EventAction.cc,v 1.2 1999-04-16 12:05:02 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -34,7 +34,7 @@ ExN05EventAction::ExN05EventAction()
 ExN05EventAction::~ExN05EventAction()
 {;}
 
-void ExN05EventAction::BeginOfEventAction()
+void ExN05EventAction::BeginOfEventAction(const G4Event*)
 {
   if(drawFlag)
     {
@@ -46,16 +46,14 @@ void ExN05EventAction::BeginOfEventAction()
     }
 }
 
-void ExN05EventAction::EndOfEventAction()
+void ExN05EventAction::EndOfEventAction(const G4Event* evt )
 {
   G4SDManager * SDman = G4SDManager::GetSDMpointer();
   G4String colNam;
   calorimeterCollID    = SDman->GetCollectionID(colNam="CalCollection");
   hadCalorimeterCollID = SDman->GetCollectionID(colNam="HadCollection");
   
-  const G4Event* evt = fpEventManager->GetConstCurrentEvent();
-  
-  G4cout << ">>> Event " << evt->GetEventID() << endl;
+   G4cout << ">>> Event " << evt->GetEventID() << endl;
   
   G4HCofThisEvent * HCE = evt->GetHCofThisEvent();
   ExN05CalorimeterHitsCollection* CaloHC    = NULL;
